--- a/releases.yaml
+++ b/releases.yaml
@@ -1,4 +1,296 @@
 releases:
+    wb-2204:
+        packages-common: &packages-wb-2204
+            atecc-util: 0.4.6
+            ca-certificates-contactless: '0.1'
+            can-utils: 0.0+git20160831-1
+            cmux: '1.2'
+            contactless-keyring: '0.1'
+            debian-archive-keyring: 2021.1.1
+            debian-keyring: 2021.07.26
+            device-tree-compiler: 1.6.0-1
+            firmware-realtek: 20170823-1~bpo9+1
+            hostapd: 1:2.3-1+deb8u4
+            hubpower: '1.0'
+            knxd-dev: 0.14.51-1
+            knxd-examples: 0.11.15-1-wb1
+            knxd-tools: 0.14.51-1
+            knxd: 0.14.51-1
+            libateccssl1.1: 0.2.2
+            libateccssl: '0.1'
+            libfdt1: 1.6.0-1
+            libirman-dev: 0.4.4-2-wb1
+            libmosquitto-dev: 1.4.15-1+wb7-5
+            libmosquitto1: 1.4.15-1+wb7-5
+            libmosquittopp-dev: 1.4.15-1+wb7-5
+            libmosquittopp1: 1.4.15-1+wb7-5
+            libnfc-bin: 1.7.1-4
+            libnfc-dev: 1.7.1-4
+            libnfc-examples: 1.7.1-4
+            libnfc-pn53x-examples: 1.7.1-4
+            libnfc5: 1.7.1-4
+            libpthsem-compat: 2.0.8
+            libpthsem-dev: 2.0.8
+            libpthsem20: 2.0.8
+            libssl1.0.0: 1.0.2l-1~bpo8+1
+            libtcc-dev: 0.9.27~git20170226.c4c3f500-1
+            libwbmqtt-dev: 1.7.2
+            libwbmqtt0: 1.7.2
+            libwbmqtt: 1.7.2
+            libwebsockets-dev: 2.0.3-2
+            libwebsockets-test-server-common: 2.0.3-2
+            libwebsockets-test-server: 2.0.3-2
+            libwebsockets6: 1.6.1-1
+            libwebsockets8: 2.0.3-2
+            mmc-utils: 0+git20170901.37c86e60-1+wb1
+            modbus-utils: 1.2.4
+            mosquitto-clients: 1.4.15-1+wb7-5
+            mosquitto-dev: 1.4.15-1+wb7-5
+            mosquitto: 1.4.15-1+wb7-5
+            mqtt-logger: 1.8.9
+            mqtt-tools: '1.2'
+            nginx-common: 1.6.2-5+deb8u2~bpo70+3
+            nginx-doc: 1.6.2-5+deb8u2~bpo70+3
+            nginx-extras: 1.6.2-5+deb8u2~bpo70+3
+            nginx-full: 1.6.2-5+deb8u2~bpo70+3
+            nginx-light: 1.6.2-5+deb8u2~bpo70+3
+            nginx: 1.6.2-5+deb8u2~bpo70+3
+            ntp-doc: 1:4.2.8p10+dfsg-3wb1
+            ntp: 1:4.2.8p10+dfsg-3wb1
+            ntpdate: 1:4.2.8p10+dfsg-3wb1
+            python-gsmmodem-new: '1:0.11'
+            python-gspread: 1:0.4.1
+            python-json-rpc: 1.9.2.wb1
+            python-mosquitto: 1.3.4-2contactless1
+            python-mqttrpc: 1.1.2
+            python-nrf24: 1.0+1
+            python-wb-common: 1.4.0
+            python-wb-io: 1.2.3
+            python-wb-mcu-fw-updater: 1.2.0
+            python3-json-rpc: 1.9.2.wb1
+            python3-mosquitto: 1.3.4-2contactless1
+            python3-mqttrpc: 1.1.2
+            python3-paho-mqtt: 1.4.0-1
+            python3-umodbus: 1.0.4-1+wb1
+            python3-wb-common: 1.4.0
+            python3-wb-diag-collect: 1.2.0
+            python3-wb-mcu-fw-updater: 1.2.0
+            python3-wb-mqtt-metrics: 0.1.1
+            python3-wb-update-manager: 1.2.5
+            sensor-tools-scada-client: '1.1'
+            serial-tool: '1.0'
+            tcc: 0.9.27~git20170226.c4c3f500-1
+            watchdog: 5.15-1
+            wb-configs-stretch: 2.3.3
+            wb-configs: 2.3.3
+            wb-daemon-watchdogs: '1.1'
+            wb-diag-collect: 1.2.0
+            wb-dt-overlays: 1.5.0
+            wb-homa-ism-radio: 1.17.3
+            wb-homa-ninja-bridge: 1.9.1
+            wb-homa-rfsniffer: 1.0.9
+            wb-homa-zway: 1.0.3+wb2
+            wb-knxd-config: 1.1.1
+            wb-mb-explorer: 1.2.7
+            wb-mcu-fw-flasher: 1.0.8
+            wb-mcu-fw-updater: 1.2.0
+            wb-mqtt-apcsnmp: '0.2'
+            wb-mqtt-bmp085: '1.2'
+            wb-mqtt-co2mon: 1.1.1
+            wb-mqtt-db-cli: 1.2.1
+            wb-mqtt-lirc: 1.1.4
+            wb-mqtt-metrics: 0.1.1
+            wb-mqtt-mhz19: '1.0'
+            wb-mqtt-sht1x: '1.0'
+            wb-mqtt-smartbus: '1.2'
+            wb-mqtt-spl-meter: 1.1.1
+            wb-mqtt-timestamper: 1.10.1
+            wb-mqtt-zabbix: '0.2'
+            wb-mqtt-zway: 1.0.3+wb2
+            wb-rules-system: 1.8.0
+            wb-test-suite-dummy: 1.9.0
+            wb-update-manager: 1.2.5
+            wb-utils: 3.5.0
+            wb-zigbee2mqtt: 1.0.0
+            wpagui: 2.3-1+deb8u4
+            wpasupplicant: 2.3-1+deb8u4
+
+        packages-armhf: &packages-wb-2204-armhf
+            <<: *packages-wb-2204
+
+            comerr-dev: 2.1-1.43.4-2+wb1
+            e2fsck-static: 1.43.4-2+wb1
+            e2fslibs: 1.43.4-2+wb1
+            e2fslibs-dev: 1.43.4-2+wb1
+            e2fsprogs: 1.43.4-2+wb1
+            emmcparm: 5.0.0
+            fuse2fs: 1.43.4-2+wb1
+            libcomerr2: 1.43.4-2+wb1
+            libss2: 1.43.4-2+wb1
+            libwbmqtt1-3: 3.7.2
+            libwbmqtt1-3-dev: 3.7.2
+            libwbmqtt1-3-test-utils: 3.7.2
+            nodejs: 12.19.0-1nodesource1
+            ss-dev: 2.0-1.43.4-2+wb1
+            wb-demo-kit-configs: 1.3.3
+            wb-essential: 1.9.0
+            wb-homa-adc: 2.4.3
+            wb-homa-gpio: 2.8.3
+            wb-homa-w1: 2.2.1
+            wb-hwconf-manager: 1.50.0
+            wb-mqtt-adc: 2.4.3
+            wb-mqtt-confed: 1.8.0
+            wb-mqtt-dac: 1.1.5
+            wb-mqtt-db: 2.5.3
+            wb-mqtt-gpio: 2.8.3
+            wb-mqtt-homeui: 2.34.1
+            wb-mqtt-iec104: 1.0.1
+            wb-mqtt-knx: 1.5.0
+            wb-mqtt-logs: 1.2.0
+            wb-mqtt-mbgate: 1.1.2
+            wb-mqtt-opcua: 1.0.4
+            wb-mqtt-serial: 2.57.1
+            wb-mqtt-smartweb: 1.1.1
+            wb-mqtt-snmp: 1.2.0
+            wb-mqtt-w1: 2.2.1
+            wb-rules: 2.11.3
+            wb-suite: 1.9.0
+            wb-test-suite-deps: 1.9.0
+            z-way-server: 3.2.2-93-g8c133c1
+            zbw: '1.2'
+            zigbee2mqtt: 1.18.1
+
+        wb7/stretch:
+            <<: *packages-wb-2204-armhf
+
+            linux-headers-wb7: 5.10.35-wb111
+            linux-image-wb7: 5.10.35-wb111
+            linux-libc-dev: 5.10.35-wb111
+            u-boot-wb7: 2:2021.10+wb1.1.1
+            u-boot-tools: 2:2021.10+wb1.1.1
+            u-boot-tools-wb: 2:2021.10+wb1.1.1
+
+        wb6/stretch:
+            <<: *packages-wb-2204-armhf
+
+            linux-headers-wb6: 5.10.35-wb111
+            linux-image-wb6: 5.10.35-wb111
+            linux-libc-dev: 5.10.35-wb111
+            u-boot-wb6: 2:2017.03+wb1.3.0
+            u-boot-tools: 2:2017.03+wb1.3.0
+            u-boot-tools-wb: 2:2017.03+wb1.3.0
+
+        wb5/stretch:
+            <<: *packages-wb-2204
+
+            linux-headers-wb2: 4.9.22-wb1
+            linux-image-wb2: 4.9.22-wb1
+            mqtt-wss: '1.1'
+            wb-adc-tools-mxs: '1.0'
+            wb-essential: 1.5.0
+            wb-homa-adc: 1.14.6
+            wb-homa-gpio: 1.19.5
+            wb-homa-w1: 1.10.1
+            wb-hwconf-manager: 1.42.1+really1.41.2
+            wb-mqtt-confed: 1.2.2
+            wb-mqtt-dac: 1.1.2
+            wb-mqtt-db: 1.7.3
+            wb-mqtt-homeui: 2.5.7
+            wb-mqtt-knx: 0.1.2
+            wb-mqtt-mbgate: 0.1.4
+            wb-mqtt-serial: 1.63.0
+            wb-mqtt-snmp: 1.0.1
+            wb-rules: 1.7.1
+            wb-suite: '1.0'
+            wb-test-suite: '1.20'
+            z-way-server: 2.2.5-1
+            u-boot-tools: 2:2017.03+wb-2
+            u-boot-tools-wb: 2:2017.03+wb-2
+
+        firmwares:
+            # WB-MR
+            mr2m: 1.17.2
+            mr2m_k6: 1.17.7
+            mr2mG: 1.17.7
+            mr3: 1.17.7
+            mr3G: 1.17.7
+            mr6: 1.17.7
+            mr6_042: 1.17.7
+            mr6G: 1.17.7
+            mr6c: 1.17.7
+            mr6cG: 1.17.7
+            mr6c_042: 1.17.7
+            mr6cu: 1.17.7
+            mr6cu_042: 1.17.7
+            mr6cuG: 1.17.7
+            mrps6: 1.17.7
+            mrps6G: 1.17.7
+            mrwl3: 1.17.7
+            mrwl3G: 1.17.7
+            mrwl3_042: 1.17.7
+            mrwm2G: 1.17.7
+            wbmwac: 1.17.7
+            wbmwac_042: 1.17.7
+            wbmwacG: 1.17.7
+            # WB-MS
+            m1w2: 4.18.6
+            m1w2-21: 4.18.6
+            m1w2G21: 4.18.6
+            mir: 4.18.6
+            mir64: 4.18.6
+            mir64_gd: 4.18.6
+            mai2cc: 4.18.6
+            ms-33: 4.18.6
+            msv2-4.0: 4.18.6
+            msv2-4.0_gd: 4.18.6
+            msw3-48mh: 4.18.6
+            msw3-48mh30: 4.18.6
+            msw3-49: 4.18.6
+            msw3-49th30: 4.18.6
+            msw3-49-467: 4.18.6
+            msw3-49_gd: 4.18.6
+            msw3-49gd_oa: 4.18.6
+            msw3G49th: 4.18.6
+            msw3G419: 4.18.6
+            msw3G419th: 4.18.6
+            # WB-MD
+            mdm3: 2.4.2
+            mdm3_042: 2.4.2
+            mdm3_26: 2.4.2
+            mdm3G26: 2.4.2
+            # WB-MAP
+            map3e: 2.3.7
+            map3e_36: 2.3.7
+            map3e_031f6: 2.3.7
+            map3eG: 2.3.7
+            map3h: 2.3.7
+            map3h51: 2.3.7
+            map6s: 2.3.7
+            map6s51: 2.3.7
+            map6se: 2.3.7
+            map12e: 2.3.7
+            map12eG: 2.3.7
+            map12h: 2.3.7
+            map3eG16: 2.3.7
+            map6seG16: 2.3.7
+            map6sG16: 2.3.7
+            # WB-MRGB
+            mrgbw: 3.0.4
+            mrgbwG: 3.0.4
+            # WB-MCM
+            mcm8: 1.3.2
+            mcm8G: 1.3.2
+            # WB-MAO
+            mao4: 2.1.1
+            mao4G: 2.1.1
+            # WB-MAI
+            wb-mai-v10: 1.3.1
+            # WB-MIO
+            mio: 1.5.1
+            # WB-REF
+            ref-df: 1.0.1
+            refu: 1.0.1
+
     wb-2201:
         packages-common: &packages-wb-2201
             atecc-util: 0.4.6
@@ -484,18 +776,18 @@ suites:
         staging: "@staging.latest"
     wb7/stretch:
         stable: wb-2201
-        testing: "@unstable.latest"
+        testing: wb-2204
         unstable: "@unstable.latest"
     wb6/stretch:
         stable: wb-2201
-        testing: "@unstable.latest"
+        testing: wb-2204
         unstable: "@unstable.latest"
     wb5/stretch:
         stable: wb-2201
-        testing: wb-2201
+        testing: wb-2204
     firmwares:
         stable: wb-2201
-        testing: "@latest"
+        testing: wb-2204
         unstable: "@latest"
 
 targets:
