--- a/releases.yaml
+++ b/releases.yaml
@@ -545,6 +545,7 @@ releases:
             ms-33: 4.18.6
             msv2-4.0: 4.18.6
             msv2-4.0_gd: 4.18.6
+            msv2G42: 4.18.8
             msw3-48mh: 4.18.6
             msw3-48mh30: 4.18.6
             msw3-49: 4.18.6
@@ -631,6 +632,7 @@ releases:
             ms-33: 4.18.7
             msv2-4.0: 4.18.7
             msv2-4.0_gd: 4.18.7
+            msv2G42: 4.18.8
             msw3-48mh: 4.18.7
             msw3-48mh30: 4.18.7
             msw3-49: 4.18.7
