--- a/releases.yaml
+++ b/releases.yaml
@@ -211,15 +211,16 @@ releases:
             python-nrf24: 1.0+1
             python-wb-common: 1.4.0
             python-wb-io: 1.2.3
-            python-wb-mcu-fw-updater: 1.3.2
+            python-wb-mcu-fw-updater: 1.4.0
+            python3-intelhex: 2.3.0-1
             python3-json-rpc: 1.9.2.wb1
             python3-mosquitto: 1.3.4-2contactless1
             python3-mqttrpc: 1.1.2
             python3-paho-mqtt: 1.4.0-1
             python3-umodbus: 1.0.4-1+wb1
             python3-wb-common: 1.4.0
-            python3-wb-diag-collect: 1.2.0
-            python3-wb-mcu-fw-updater: 1.3.2
+            python3-wb-diag-collect: 1.2.1
+            python3-wb-mcu-fw-updater: 1.4.0
             python3-wb-mqtt-metrics: 0.1.1
             python3-wb-update-manager: 1.2.5
             sensor-tools-scada-client: '1.1'
@@ -229,7 +230,7 @@ releases:
             wb-configs-stretch: 2.3.4
             wb-configs: 2.3.4
             wb-daemon-watchdogs: '1.1'
-            wb-diag-collect: 1.2.0
+            wb-diag-collect: 1.2.1
             wb-dt-overlays: 1.5.0
             wb-homa-ism-radio: 1.17.3
             wb-homa-ninja-bridge: 1.9.1
@@ -237,8 +238,8 @@ releases:
             wb-homa-zway: 1.0.3+wb2
             wb-knxd-config: 1.1.1
             wb-mb-explorer: 1.2.7
-            wb-mcu-fw-flasher: 1.0.8
-            wb-mcu-fw-updater: 1.3.2
+            wb-mcu-fw-flasher: 1.1.0
+            wb-mcu-fw-updater: 1.4.0
             wb-mqtt-apcsnmp: '0.2'
             wb-mqtt-bmp085: '1.2'
             wb-mqtt-co2mon: 1.1.1
@@ -252,10 +253,10 @@ releases:
             wb-mqtt-timestamper: 1.10.1
             wb-mqtt-zabbix: '0.2'
             wb-mqtt-zway: 1.0.3+wb2
-            wb-rules-system: 1.8.0
-            wb-test-suite-dummy: 1.9.0
+            wb-rules-system: 1.8.1
+            wb-test-suite-dummy: 1.10.0
             wb-update-manager: 1.2.5
-            wb-utils: 3.5.1
+            wb-utils: 3.6.1
             wb-zigbee2mqtt: 1.1.0
             wpagui: 2.3-1+deb8u4
             wpasupplicant: 2.3-1+deb8u4
@@ -273,47 +274,49 @@ releases:
             libateccssl1.1: 0.2.3
             libcomerr2: 1.43.4-2+wb1
             libss2: 1.43.4-2+wb1
-            libwbmqtt1-3: 3.7.2
-            libwbmqtt1-3-dev: 3.7.2
-            libwbmqtt1-3-test-utils: 3.7.2
+            libwbmqtt1-3: 3.8.1
+            libwbmqtt1-3-dev: 3.8.1
+            libwbmqtt1-3-test-utils: 3.8.1
             nodejs: 12.19.0-1nodesource1
+            python3-modbus-utils-rpc: 1.0.1
+            rapidscada: 6.0.0~beta7-2
             ss-dev: 2.0-1.43.4-2+wb1
             wb-demo-kit-configs: 1.5.0
-            wb-essential: 1.9.0
-            wb-homa-adc: 2.4.3
-            wb-homa-gpio: 2.8.3
+            wb-essential: 1.10.0
+            wb-homa-adc: 2.5.0
+            wb-homa-gpio: 2.8.4
             wb-homa-w1: 2.2.1
-            wb-hwconf-manager: 1.50.0
-            wb-mqtt-adc: 2.4.3
-            wb-mqtt-confed: 1.8.0
-            wb-mqtt-dac: 1.1.6
-            wb-mqtt-db: 2.5.3
-            wb-mqtt-gpio: 2.8.3
-            wb-mqtt-homeui: 2.35.1-wb1
+            wb-hwconf-manager: 1.52.2
+            wb-mqtt-adc: 2.5.0
+            wb-mqtt-confed: 1.8.1
+            wb-mqtt-dac: 1.2.0
+            wb-mqtt-db: 2.5.5
+            wb-mqtt-gpio: 2.8.4
+            wb-mqtt-homeui: 2.40.1
             wb-mqtt-iec104: 1.0.1
-            wb-mqtt-knx: 1.5.0
-            wb-mqtt-logs: 1.2.0
+            wb-mqtt-knx: 1.9.0
+            wb-mqtt-logs: 1.3.0
             wb-mqtt-mbgate: 1.1.2
             wb-mqtt-opcua: 1.0.4
-            wb-mqtt-serial: 2.59.2-wb2
+            wb-mqtt-rfblinds: '1.0'
+            wb-mqtt-serial: 2.63.1
             wb-mqtt-smartweb: 1.1.1
             wb-mqtt-snmp: 1.2.0
             wb-mqtt-w1: 2.2.1
-            wb-rules: 2.11.3
-            wb-suite: 1.9.0
-            wb-test-suite-deps: 1.9.0
+            wb-rules: 2.11.4
+            wb-suite: 1.10.0
+            wb-test-suite-deps: 1.10.0
             z-way-server: 3.2.2-93-g8c133c1
             zbw: '1.2'
-            zigbee2mqtt: 1.25.0
+            zigbee2mqtt: 1.25.2
             zigbee2mqtt-1.18.1: 1.18.1
-            rapidscada: 6.0.0~beta7-2
 
         wb7/stretch:
             <<: *packages-wb-2207-armhf-stretch
 
-            linux-headers-wb7: 5.10.35-wb111
-            linux-image-wb7: 5.10.35-wb114
-            linux-libc-dev: 5.10.35-wb111
+            linux-headers-wb7: 5.10.35-wb116
+            linux-image-wb7: 5.10.35-wb116
+            linux-libc-dev: 5.10.35-wb116
             u-boot-wb7: 2:2021.10+wb1.1.1
             u-boot-tools: 2:2021.10+wb1.1.1
             u-boot-tools-wb: 2:2021.10+wb1.1.1
@@ -321,9 +324,9 @@ releases:
         wb6/stretch:
             <<: *packages-wb-2207-armhf-stretch
 
-            linux-headers-wb6: 5.10.35-wb111
-            linux-image-wb6: 5.10.35-wb111
-            linux-libc-dev: 5.10.35-wb111
+            linux-headers-wb6: 5.10.35-wb116
+            linux-image-wb6: 5.10.35-wb116
+            linux-libc-dev: 5.10.35-wb116
             u-boot-wb6: 2:2017.03+wb1.3.0
             u-boot-tools: 2:2017.03+wb1.3.0
             u-boot-tools-wb: 2:2017.03+wb1.3.0
