--- a/releases.yaml
+++ b/releases.yaml
@@ -25,9 +25,9 @@ releases:
             libss2: 1.43.4-2+wb1
             libwbmqtt-dev: 1.7.2
             libwbmqtt0: 1.7.2
-            libwbmqtt1-3-dev: 3.7.2
-            libwbmqtt1-3-test-utils: 3.7.2
-            libwbmqtt1-3: 3.7.2
+            libwbmqtt1-3-dev: 3.8.1
+            libwbmqtt1-3-test-utils: 3.8.1
+            libwbmqtt1-3: 3.8.1
             libwbmqtt: 1.7.2
             modbus-utils: 1.2.4
             mqtt-logger: 1.8.9
@@ -39,14 +39,16 @@ releases:
             python-nrf24: 1.0+1
             python-wb-common: 1.4.0
             python-wb-io: 1.2.3
-            python-wb-mcu-fw-updater: 1.3.2
+            python-wb-mcu-fw-updater: 1.4.0
+            python3-intelhex: 2.3.0-1
             python3-json-rpc: 1.9.2.wb1
+            python3-modbus-utils-rpc: 1.0.1
             python3-mqttrpc: 1.1.2
             python3-paho-mqtt: 1.4.0-1
             python3-umodbus: 1.0.4-1+wb1
             python3-wb-common: 1.4.0
-            python3-wb-diag-collect: 1.2.0
-            python3-wb-mcu-fw-updater: 1.3.2
+            python3-wb-diag-collect: 1.2.1
+            python3-wb-mcu-fw-updater: 1.4.0
             python3-wb-mqtt-metrics: 0.1.1
             python3-wb-update-manager: 1.2.5
             rapidscada: 6.0.0~beta7-2
@@ -56,26 +58,26 @@ releases:
             wb-configs: 3.0.1~exp~feature+49818+bullseye~16~g0288cc5
             wb-daemon-watchdogs: '1.1'
             wb-demo-kit-configs: 1.5.0
-            wb-diag-collect: 1.2.0
+            wb-diag-collect: 1.2.1
             wb-dt-overlays: 1.5.0
-            wb-essential: 1.9.0
+            wb-essential: 1.10.0
             wb-homa-ism-radio: 1.17.3
             wb-homa-ninja-bridge: 1.9.1
             wb-homa-rfsniffer: 1.0.9
-            wb-hwconf-manager: 1.50.0
+            wb-hwconf-manager: 1.52.2
             wb-knxd-config: 1.1.1
             wb-mb-explorer: 1.2.7
-            wb-mcu-fw-flasher: 1.0.8
-            wb-mcu-fw-updater: 1.3.2
-            wb-mqtt-adc: 2.4.3
+            wb-mcu-fw-flasher: 1.1.0
+            wb-mcu-fw-updater: 1.4.0
+            wb-mqtt-adc: 2.5.0
             wb-mqtt-apcsnmp: '0.2'
             wb-mqtt-bmp085: '1.2'
             wb-mqtt-co2mon: 1.1.1
             wb-mqtt-confed: 1.10.0~exp~feature+50202+bullseye+confed+rebase~7~g9b4cf58
-            wb-mqtt-dac: 1.1.6
+            wb-mqtt-dac: 1.2.0
             wb-mqtt-db-cli: 1.3.0~exp~feature+50202+bullseye~2~g32915c9
-            wb-mqtt-db: 2.5.3
-            wb-mqtt-gpio: 2.8.3
+            wb-mqtt-db: 2.5.5
+            wb-mqtt-gpio: 2.8.4
             wb-mqtt-homeui: 2.35.1-wb1
             wb-mqtt-iec104: 1.0.1
             wb-mqtt-knx: 1.6.0~exp~feature+50202+bullseye~1~g9b4228e
@@ -85,7 +87,8 @@ releases:
             wb-mqtt-metrics: 0.1.1
             wb-mqtt-mhz19: '1.0'
             wb-mqtt-opcua: 1.0.4
-            wb-mqtt-serial: 2.59.2-wb2
+            wb-mqtt-rfblinds: '1.0'
+            wb-mqtt-serial: 2.63.1
             wb-mqtt-sht1x: '1.0'
             wb-mqtt-smartbus: '1.2'
             wb-mqtt-smartweb: 1.1.1
@@ -94,18 +97,18 @@ releases:
             wb-mqtt-timestamper: 1.10.1
             wb-mqtt-w1: 2.2.1
             wb-mqtt-zabbix: '0.2'
-            wb-rules-system: 1.8.0
+            wb-rules-system: 1.8.1
             wb-rules: 2.12.0~exp~feature+mosquitto+socket~1~gf346539
-            wb-suite: 1.9.0
-            wb-test-suite-deps: 1.9.0
-            wb-test-suite-dummy: 1.9.0
+            wb-suite: 1.10.0
+            wb-test-suite-deps: 1.10.0
+            wb-test-suite-dummy: 1.10.0
             wb-update-manager: 1.2.5
             wb-utils: 3.7.0~exp~feature+50202+bullseye~1~gd3c85c3
             wb-zigbee2mqtt: 1.1.0
             z-way-server: 3.2.2-93-g8c133c1
             zbw: '1.2'
             zigbee2mqtt-1.18.1: 1.18.1
-            zigbee2mqtt: 1.25.0
+            zigbee2mqtt: 1.25.2
 
         wb7/bullseye:
             <<: *packages-wb-2207
