--- a/releases.yaml
+++ b/releases.yaml
@@ -704,6 +704,7 @@ releases:
             msw3G49th: 4.18.6
             msw3G419: 4.18.6
             msw3G419th: 4.18.6
+            msw3Gc: 4.19.0
             # WB-MD
             mdm3: 2.4.2
             mdm3_042: 2.4.2
